--- a/styles/architect.css
+++ b/styles/architect.css
@@ -78,4 +78,35 @@ nav li a {
     font-size: 16px;
     font-weight: 400;
 }
+
+.banner img{
+    width: 100%;
+    padding-top: 20px;
+}
 /* banner styles */
+
+
+/* responsive sections */
+
+/* mobile devices */
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        display: flex;
+        flex-direction: column;
+    }   
+}
+
+/* tablet or medium devices */
+@media screen and (min-width:576px) and (max-width:992px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        display: flex;
+        flex-direction: column;
+    }   
+}
+/* responsive section */
